change name to Mr Speaker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Scratch",
-  "name": "Scratch Note Taking App",
+  "short_name": "Mr Speaker",
+  "name": "Mr Speaker Note Taking App",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
